--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
   </footer>
 
 </div>
-<script src="models/user.js"></script>
+<script src="models/User.js"></script>
 <script src="controllers/UserController.js"></script>
 <script src="index.js"></script>
 </body>
