--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <!-- ./col -->
           </div>
 
-          <div class="box box-success">
+          <div id="box-user-create" class="box box-success">
             <div class="box-header with-border">
               <h3 class="box-title">Novo Usuário</h3>
             </div>
@@ -495,7 +495,7 @@
               </div>
             </form>
           </div>
-          <div class="box box-primary" style="display: none;">
+          <div id="box-user-update" class="box box-primary" style="display: none;">
             <div class="box-header with-border">
               <h3 class="box-title">Editar Usuário</h3>
             </div>
@@ -792,7 +792,7 @@
               <!-- /.box-body -->
               <div class="box-footer">
                 <button type="submit" class="btn btn-primary">Salvar</button>
-                <button type="button" class="btn btn-default">Cancelar</button>
+                <button type="button" class="btn btn-default btn-cancel">Cancelar</button>
               </div>
             </form>
           </div>
